refactor(Frames.java): OCP를 구현하기 위해 내부 필드 List 타입 사용